--- a/solid/摄影.MD
+++ b/solid/摄影.MD
@@ -4,19 +4,18 @@
 
 [A7M4 视频 ISO 基准](../pictures/摄影/002.png)
 
-静态（F4/F8）
 
-​    ISO：档位尽可能小的最大 ISO（50/100, 64/128/400, 80/160/500, 200/640, 250/800, 320/1000）
 
-​        曝光时间：不超过 1/焦距s
-​            拍照
-​        曝光时间：超过 1/焦距s
-​            3、加长[曝光时间]（锐度可能降低/模糊），<= 1/50s
-​                拍照
-​            2、提高[ISO]（噪点可能明显增加）直到曝光时间不超过阈值， < 3200
-​                拍照
-​            1、加长[曝光时间] + 提高[ISO]
-​                拍照
-
-动态（光圈最大）
+- 静态（F4/F8）
+  - ISO：档位尽可能小的最大 ISO（50/100, 64/128/400, 80/160/500, 200/640, 250/800, 320/1000）
+    - 曝光时间：不超过 1/焦距s
+      - 拍照
+    - 曝光时间：超过 1/焦距s
+      - 3、加长[曝光时间]（锐度可能降低/模糊），<= 1/50s
+        - 拍照
+      - 2、提高[ISO]（噪点可能明显增加）直到曝光时间不超过阈值， < 3200
+        - 拍照
+      - 1、加长[曝光时间] + 提高[ISO]
+        - 拍照
+- 动态（光圈最大）
 
