--- a/solid/摄影.MD
+++ b/solid/摄影.MD
@@ -1,4 +1,4 @@
-# 公式
+## 公式
 
 [A7M4 ISO-Nosie](../pictures/摄影/001.jpg)
 
@@ -18,4 +18,64 @@
       - 1、加长[曝光时间] + 提高[ISO]
         - 拍照
 - 动态（光圈最大）
+
+
+
+
+
+```
+x y
+3183 2081
+3548 2896
+365 815
+133225 + 664225 = 797450
+
+7008(pix) / 893(pix) = 7.84(x) * 66.8(m) = 523.71(m)
+400000(m/h) = 111.11(m/s)
+523.71(m) / 111.11(m/s) = 4.71(s)
+4.71(s) / 7008(pix) = 6.72 / 10000 = 1/1488.1(s)
+
+4672(pix) / 893(pix) = 5.23(x) * 66.8(m) = 349.36(m)
+400000(m/h) = 111.11(m/s)
+349.36(m) / 111.11(m/s) = 3.144(s)
+3.144(s) / 4672(pix) = 6.72 / 10000 = 1/1488.1(s)
+```
+
+
+
+## 焦距-视角
+
+| 焦距(mm) | 视角(°) | tan(/2)  |
+| -------- | ------- | -------- |
+| 800      | 3°05'   |          |
+| 600      | 4°10'   |          |
+| 500      | 5°      |          |
+| 400      | 6°10'   |          |
+| 300      | 8°15'   |          |
+| 240      | 10°     |          |
+| 200      | 12°     |          |
+| 135      | 18°     |          |
+| 125      | 19°     |          |
+| 105      | 22°     | 0.194380 |
+| 100      | 24°     |          |
+| 90       | 26°     |          |
+| 85       | 28°     |          |
+| 80       | 30°     |          |
+| 70       | 34°     |          |
+| 50       | 46°     |          |
+| 35       | 63°     |          |
+| 27       | 76°     |          |
+| 25       | 75°     |          |
+| 24       | 84°     |          |
+| 23       | 86°     |          |
+| 20       | 94°     |          |
+| 18       | 99.5°   |          |
+| 17       | 104°    |          |
+| 16       | 105.6°  |          |
+| 14       | 114°    |          |
+| 12       | 120°    |          |
+| 11       | 125°    |          |
+| 15鱼眼    | 180°    |          |
+
+
 
