--- a/solid/摄影.MD
+++ b/solid/摄影.MD
@@ -79,3 +79,29 @@ x y
 
 
 
+## 色调
+
+设置 -> 曝光/颜色 -> 颜色/色调 -> 创意外观
+
+选择适合的滤镜效果（可以调节滤镜参数）
+
+- ST：默认标准，还原真实色彩
+- PT：饱和度比ST略高，色彩鲜明，色调不夸张，适用范围广
+- NT：满满的电影氛围感，低饱和低对比，记录日常很有感觉
+- VV：色彩浓郁，对比度高，适合色彩丰富的场景
+- VV2：对比度比VV低，画面更明亮
+- FL：胶片感浓郁，很适合树林蓝天等场景，胶片蓝和胶片绿质感出众，拍人像也很优秀
+- IN：低饱和低对比，文艺风的福音，自带日系哑光效果，拍摄人像很有氛围感，拍摄花朵也很好看（如图3）
+- SH：比IN明亮清新，适合日系小清新风格
+- BW：经典黑白色调，明暗对比恰到好处，随手拍大片的即视感
+- SE：复古棕色调，适合复古场景，很有格调
+
+
+
+## 对焦跟踪
+
+设置 -> 操作自定义 -> 自定义键/转盘设置 -> 后侧1
+
+分配 `设置 -> 对焦 -> 对焦区域 -> 跟踪开启 + AF开启` 给 AF-ON 按钮
+
+拍摄静态物体时，使用 AF-ON 按钮对焦并持续按住，可以移动画面并保持焦点在之前的对焦区域
