--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -826,6 +826,40 @@ tar -zcvf .tar.gz -C /home/username/ .
 
 
 
+##### unzip
+
+```sh
+unzip [-cflptuvz][-agCjLMnoqsVX][-P <密码>][.zip文件][文件][-d <目录>][-x <文件>] 或 unzip [-Z]
+# -c 将解压缩的结果显示到屏幕上，并对字符做适当的转换。
+# -f 更新现有的文件。
+# -l 显示压缩文件内所包含的文件。
+# -p 与-c参数类似，会将解压缩的结果显示到屏幕上，但不会执行任何的转换。
+# -t 检查压缩文件是否正确。
+# -u 与-f参数类似，但是除了更新现有的文件外，也会将压缩文件中的其他文件解压缩到目录中。
+# -v 执行时显示详细的信息。
+# -z 仅显示压缩文件的备注文字。
+# -a 对文本文件进行必要的字符转换。
+# -b 不要对文本文件进行字符转换。
+# -C 压缩文件中的文件名称区分大小写。
+# -j 不处理压缩文件中原有的目录路径。
+# -L 将压缩文件中的全部文件名改为小写。
+# -M 将输出结果送到more程序处理。
+# -n 解压缩时不要覆盖原有的文件。
+# -o 不必先询问用户，unzip执行后覆盖原有文件。
+# -P<密码> 使用zip的密码选项。
+# -q 执行时不显示任何信息。
+# -s 将文件名中的空白字符转换为底线字符。
+# -V 保留VMS的文件版本信息。
+# -X 解压缩时同时回存文件原来的UID/GID。
+# [.zip文件] 指定.zip压缩文件。
+# [文件] 指定要处理.zip压缩文件中的哪些文件。
+# -d<目录> 指定文件解压缩后所要存储的目录。
+# -x<文件> 指定不要处理.zip压缩文件中的哪些文件。
+# -Z unzip -Z等于执行zipinfo指令。
+```
+
+
+
 ##### fdisk
 
 ```shell
@@ -25645,6 +25679,33 @@ rabbitmqctl clear_permissions [-p vhostpath] username
 
 
 
+### 延迟队列
+
+[Community Plugins](https://www.rabbitmq.com/community-plugins.html)
+
+
+
+```shell
+# 下载插件
+wget -c https://github.com/rabbitmq/rabbitmq-delayed-message-exchange/releases/download/v3.12.0/rabbitmq_delayed_message_exchange-3.12.0.ez
+# 解压缩文件
+sudo unzip rabbitmq_delayed_message_exchange-3.12.0.ez -d /opt/apps/rabbitmq/plugins
+# 启用插件
+sudo /opt/apps/rabbitmq/sbin/./rabbitmq-plugins enable rabbitmq_delayed_message_exchange
+# 重启
+sudo service rabbitmq restart
+
+sudo -u rabbitmq /opt/apps/rabbitmq/sbin/./rabbitmqctl force_boot
+This cluster node was shut down while other nodes were still running.
+To avoid losing data, you should start the other nodes first, then
+start this one. To force this node to start, first invoke
+"rabbitmqctl force_boot". If you do so, any changes made on other
+cluster nodes after this one was shut down may be lost.
+
+```
+
+
+
 
 
 ### 集群
@@ -25694,6 +25755,8 @@ sudo -u rabbitmq /opt/apps/rabbitmq/sbin/./rabbitmqctl start_app
 
 # 查看集群状态
 sudo -u rabbitmq /opt/apps/rabbitmq/sbin/./rabbitmqctl cluster_status
+
+/opt/apps/rabbitmq/var/lib/rabbitmq/mnesia/rabbit@server02/cluster_nodes.config
 ```
 
 
