--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -29112,6 +29112,17 @@ hashCode 散列码计算（来自：Effective Java）
 
 
 
+## Jackson
+
+```java
+// json 字符串转 List
+List<Obj> result = objectMapper.readValue(jsonStr, objectMapper.getTypeFactory().constructParametricType(List.class, Obj.class));
+```
+
+
+
+
+
 # 数据库
 
 ## Oracle
