--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -27798,6 +27798,17 @@ redis-cli -c -h 192.168.31.130 -p 7007 -a 123456 cluster replicate f15bdfcd4b204
 
 
 
+## 操作
+
+```shell
+# 选择第一个数据库（默认为0）
+SELECT 0
+# 查看当前数据库下的所有键值对
+KEYS *
+```
+
+
+
 # Zookeeper
 
 ## 操作
