--- a/solid/前端.MD
+++ b/solid/前端.MD
@@ -3537,7 +3537,34 @@ Vue.use(VueAxios);
 
 ## 快速搭建一个vue工程
 
-https://github.com/imyxiong/UUMSF.git
+```shell
+## 1.创建命令
+npm create vue@latest
+
+## 2.具体配置
+## 配置项目名称
+√ Project name: CommonAuth
+## 是否添加TypeScript支持
+√ Add TypeScript?  Yes
+## 是否添加JSX支持
+√ Add JSX Support?  No
+## 是否添加路由环境
+√ Add Vue Router for Single Page Application development?  No
+## 是否添加pinia环境
+√ Add Pinia for state management?  No
+## 是否添加单元测试
+√ Add Vitest for Unit Testing?  No
+## 是否添加端到端测试方案
+√ Add an End-to-End Testing Solution? » No
+## 是否添加ESLint语法检查
+√ Add ESLint for code quality?  Yes
+## 是否添加Prettiert代码格式化
+√ Add Prettier for code formatting?  No
+```
+
+
+
+
 
 ### 环境准备
 
