--- a/solid/摄影.MD
+++ b/solid/摄影.MD
@@ -105,3 +105,71 @@ x y
 分配 `设置 -> 对焦 -> 对焦区域 -> 跟踪开启 + AF开启` 给 AF-ON 按钮
 
 拍摄静态物体时，使用 AF-ON 按钮对焦并持续按住，可以移动画面并保持焦点在之前的对焦区域
+
+
+
+# 镜头选购指南与参考
+
+## 索尼
+
+https://sonyalpha.blog/
+
+### **评级说明**
+
+- Outstanding
+  - 在这个等级上，您可以充分发挥61Mpix传感器的潜力
+  - 即使在具有出色对比度的 100% 裁剪上，一切都很清晰
+  - 很少有镜头能在整个画面上达到这个等级
+- Excellent
+  - 在这个等级上，您可以获得出色的结果，只有与出色的镜头进行比较，您才能看到您可以做得更好一点
+  - 该等级将充分利用A1的50Mpix或索尼A42RIII的42Mpix的全部潜力。
+  - 该级别的镜头在索尼A7RIV上完全没问题
+- Very Good
+  - 在这个等级下，你仍然可以得到非常好的结果，但是当观看100%的61Mpix裁剪时，预计会开始出现一些柔和度。
+  - 该等级将充分利用A7IV的33Mpix或索尼A7III的24Mpix的全部潜力。
+  - 该等级的镜头不足以在任何光圈下利用A7REV，但如果照片中没有大量裁剪，仍然可以提供良好的效果
+  - 通常，一些优秀的素数在使用时会属于这一类 全开
+- Good
+  - 在此等级下，整体观看时图像仍然不错，但在100%下查看时缺乏清晰度。
+  - 这些镜头仍然推荐用于A7III，但不建议在A7RIII上使用。
+  - 这些镜头不足以用于A7RIV
+- Average
+  - 当光圈关闭时，这些镜头几乎无法达到非常好的效果，而且通常它们甚至不在整个画面上
+  - 这些镜头不足以用于A7RIII，A7RIV
+  - 这些镜头在A7III上是可以接受的，但不能利用24Mpix的潜力。
+- Bad
+  - 当在所有物体（A7III，A7RIII，A7RIV）上以100%查看时，这些结果会很差
+  - 只有看电视还行，电脑如果不放大
+
+
+
+### 光圈锐度表
+
+![header](../pictures/摄影/header.png)
+
+![Sony FE 24-70 mm F2.8 GM II.png](../pictures/摄影/Sony FE 24-70 mm F2.8 GM II.png.png)
+
+![Tamron 28-75 mm F2.8 Di III VC VXD G2](../pictures/摄影/Tamron 28-75 mm F2.8 Di III VC VXD G2.png)
+
+![Sony FE 70-200mm F2.8 GM II](../pictures/摄影/Sony FE 70-200mm F2.8 GM II.png)
+
+![Tamron 70-180mm F2.8 Di III VC VXD G2](../pictures/摄影/Tamron 70-180mm F2.8 Di III VC VXD G2.png)
+
+![Sony FE 70-200mm F4 Macro G II OSS](../pictures/摄影/Sony FE 70-200mm F4 Macro G II OSS.png)
+
+![Sony FE 24-105mm F4 G](../pictures/摄影/Sony FE 24-105mm F4 G.png)
+
+![Tamron 35-150mm F2-2.8 Di III VXD](../pictures/摄影/Tamron 35-150mm F2-2.8 Di III VXD.png)
+
+![Sony FE 100-400mm F4.5-5.6 GM](../pictures/摄影/Sony FE 100-400mm F4.5-5.6 GM.png)
+
+![Sony FE 200-600mm F5.6-6.3 G](../pictures/摄影/Sony FE 200-600mm F5.6-6.3 G.png)
+
+![Sigma 60-600mm F4.5-6.3 DG DN Sports](../pictures/摄影/Sigma 60-600mm F4.5-6.3 DG DN Sports.png)
+
+![Tamron 50-400mm F4.5-6.3 Di III VC VXD](../pictures/摄影/Tamron 50-400mm F4.5-6.3 Di III VC VXD.png)
+
+
+
+
+
