--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -29163,6 +29163,58 @@ select 序列名.nextval from dual;
 
 
 
+##### ipv4-数字互转
+
+###### ipv4 转数字
+
+```sql
+create or replace function ip2number(ip varchar2)
+return number
+is
+  ip_num_hex varchar2(80);
+begin
+  if (regexp_like(ip, '^(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})$')) then
+     ip_num_hex := lpad(trim(to_char(regexp_replace(ip, '^(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})$', '\1'), 'XX')),2,'0') ||
+                   lpad(trim(to_char(regexp_replace(ip, '^(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})$', '\2'), 'XX')),2,'0') ||
+                   lpad(trim(to_char(regexp_replace(ip, '^(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})$', '\3'), 'XX')),2,'0') ||
+                   lpad(trim(to_char(regexp_replace(ip, '^(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})$', '\4'), 'XX')),2,'0');
+     return to_number(ip_num_hex, 'XXXXXXXX');
+  else
+     return -1;
+  end if;
+exception
+when others then
+  return -99999999999;
+end;
+```
+
+
+
+###### 数字转 ipv4
+
+```sql
+-- ipv4数字转ipv4
+create or replace function number2ip(num number)
+return varchar2
+is
+    ip_num_hex varchar2(80);
+begin
+    if num is null or num < 0 or num > 4294967295 then
+        return null;
+    else
+        -- 左位移 = num * 2^位移位数，右侧补0，左侧丢弃
+        -- 右位移 = num / 2^位移位数，左侧补0，右侧丢弃
+        -- POWER(2, 24) = 16777216
+        -- POWER(2, 16) = 65536
+        -- POWER(2, 8) = 256
+        return BITAND(num/16777216, 255) || '.' || BITAND(num/65536, 255) || '.' || BITAND(num/256, 255) || '.' || BITAND(num, 255);
+    end if;
+exception
+when others then
+    return null;
+end;
+```
+
 
 
 # Git
