--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -908,6 +908,8 @@ curl -X POST -d 'age=1&name=json' URL
 curl -H "Content-Type: application/json" -X POST -d '{"age":1,"name":"json"}' URL
 # json 文件内容作为数据发送 json 格式请求
 curl -H "Content-Type: application/json" -X POST -d @jsoninfo.json URL
+# 输出保存到文件
+curl URL >> output.json
 ```
 
 
