--- a/solid/摄影.MD
+++ b/solid/摄影.MD
@@ -1,9 +1,5 @@
 ## 公式
 
-[A7M4 ISO-Nosie](../pictures/摄影/001.jpg)
-
-[A7M4 视频 ISO 基准](../pictures/摄影/002.png)
-
 
 
 - 静态（F4/F8）
@@ -79,6 +75,16 @@ x y
 
 
 
+# A7M4
+
+[A7M4 ISO-Nosie](../pictures/摄影/001.jpg)
+
+[A7M4 视频 ISO 基准](../pictures/摄影/002.png)
+
+
+
+# A7R5
+
 ## 色调
 
 设置 -> 曝光/颜色 -> 颜色/色调 -> 创意外观
@@ -105,6 +111,19 @@ x y
 分配 `设置 -> 对焦 -> 对焦区域 -> 跟踪开启 + AF开启` 给 AF-ON 按钮
 
 拍摄静态物体时，使用 AF-ON 按钮对焦并持续按住，可以移动画面并保持焦点在之前的对焦区域
+
+
+
+## 视频
+
+ 
+
+| 模式         | 裁切 | 采样        | 读出速度(ms) |
+| ------------ | ---- | ----------- | ------------ |
+| 4K24P        | 1    | 4.8K 超采样 | 18.6         |
+| 4K60P        | 1.24 | 3.8K 欠采样 | 15           |
+| S35模式4K24P | 1.52 | 6.3K 超采样 | 30.9         |
+| 8K24P        | 1.24 | 7.6K 欠采样 | 38.1         |
 
 
 
