--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -665,6 +665,7 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main 
 | Seata         | 1.7.0   | 7090[dashboard], 8090[server]                                | 10494, 10535                             | 11494, 11535        | 是             |
 | RabbitMQ      | 3.12.6  | 15672[management], 5672[AMQP 0-9-1 without TLS], 5671[AMQP 0-9-1 with TLS] | 10575, 10574, 10563,                     | 11575, 11574, 11563 |                |
 | Zipkin        | 2.24.3  | 9411[dashboard]                                              | 10527                                    | 11527               |                |
+| Nginx         | 1.24.0  | 80                                                           |                                          |                     |                |
 
 
 
