--- a/solid/摄影.MD
+++ b/solid/摄影.MD
@@ -77,13 +77,27 @@ x y
 
 # A7M4
 
-[A7M4 ISO-Nosie](../pictures/摄影/001.jpg)
+![A7R5 ISO-Noise](../pictures/摄影/a7r5-iso-noise.svg)
 
-[A7M4 视频 ISO 基准](../pictures/摄影/002.png)
+![A7R5 ISO-PDR](../pictures/摄影/a7r5-iso-pdr.svg)
+
+![A7M4 视频 ISO 基准](../pictures/摄影/002.png)
 
 
 
 # A7R5
+
+
+
+![A7R5 ISO-Noise](../pictures/摄影/a7r5-iso-noise.svg)
+
+![A7R5 ISO-PDR](../pictures/摄影/a7r5-iso-pdr.svg)
+
+
+
+
+
+
 
 ## 色调
 
