--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -29598,17 +29598,13 @@ git clone --recurse-submodules git@github.com:yangxiongbro/DemoSpringCloudAlibab
 # 可以在 .gitmodules 文件中设置 （这样其他人也可以跟踪它）
 # 或者在 .git/config 文件中设置 （只在本地有效）
 # 在对应模块下添加 branch = release-1.0 即可修改为想要拉取的分支
-git submodule update --remote CommonJava
+git submodule update --remote CommonJava 或 git submodule update --remote --recursive CommonSpring
 
 # 删除子模块
-# 1.从 .gitmodules 文件中删除子模块的相关条目
-# 2.从 .git/config 文件中删除子模块的相关条目
-# 3.从 Git 索引中删除子模块相关的目录
-git rm --cached CommonJava
-# 4.删除子模块相关的未跟踪文件
-rm -rf .git/modules/CommonJava
-# 5.删除子模块的物理文件
-rm -rf CommonJava
+git submodule deinit -f CommonJava
+git rm -f CommonJava
+git commit -m "删除子模块"
+# 删除文件夹 .git/modules/CommonJava
 ```
 
 报错
