--- a/solid/摄影.MD
+++ b/solid/摄影.MD
@@ -141,6 +141,15 @@ x y
 
 
 
+| 机内格式           | XAVC HS | XAVC S         | XAVC S-I       |
+| ------------------ | ------- | -------------- | -------------- |
+| 编码格式           | H.265   | H.264 帧间压缩 | H.264 帧内压缩 |
+| 画质               | 优秀    | 优良           | 最佳           |
+| 文件大小           | 较小    | 较小           | 较大           |
+| 剪辑对电脑性能要求 | 较高    | 友好           | 友好           |
+
+
+
 # 镜头选购指南与参考
 
 ## 索尼
