--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -1611,6 +1611,38 @@ uname -r
 
 
 
+## 误删 /usr/bin 恢复
+
+```shell
+1、使用相同镜像创建一个U盘启动器
+2、使用相同镜像创建一台虚拟机
+3、将虚拟机中的/usr/bin文件夹拷贝到U盘启动器中 sudo cp -r -L /usr/bin /mnt/usb/
+4、插入U盘，使用U盘启动，在安装界面进入shell，然后挂载设备(nvme0n1p、sha...)。如果都不是硬盘设备则去安装界面进入硬盘分区后退出再操作
+5、将U盘(/cdrom)中之前拷贝的bin拷贝到硬盘中的/usr目录下
+6、重启，使用硬盘启动并进入恢复模式
+7、执行以下命令
+sudo chown root:root /usr/bin/*
+sudo chmod 4755 su
+sudo chmod 4755 sudo
+8、重启进入系统
+9、查看虚拟机/usr/bin目录的文件权限，并对主机上的文件权限进行相应修改
+ls -l /usr/bin | grep '^[^l]rws'
+-rwsr-xr-x
+sudo chmod 4755 sudo
+ls -l /usr/bin | grep '^l'
+lrwxrwxrwx
+sudo ln -sf whatis apropos
+
+sudo update-alternatives --install "/usr/bin/java" "java" "/opt/apps/jdk/bin/java" 1
+sudo update-alternatives --install "/usr/bin/javac" "javac" "/opt/apps/jdk/bin/javac" 1
+sudo chmod a+x /usr/bin/java
+sudo chmod a+x /usr/bin/javac
+
+sudo ln -s /opt/apps/mysql/bin/mysql /usr/bin/mysql
+```
+
+
+
 # JVM
 
 ## 简介
@@ -10050,7 +10082,7 @@ sudo systemctl status mysqld.service
 
 
 
-##### 连接数据库
+##### 连接数据库/usr/bin
 
 ```shell
 #在/usr/bin下建立指向mysql的软连接之后使用随机密码登录mysql数据库 
