--- a/solid/摄影.MD
+++ b/solid/摄影.MD
@@ -213,5 +213,28 @@ https://sonyalpha.blog/
 
 
 
+# 后期
 
+## 调色
+
+品红色(青绿色) - 红色 - 橙色(蓝紫色)
+
+黄绿色(蓝紫色) - 绿色 - 青绿色(紫红色)
+
+青色(橙黄色) - 蓝色 - 紫色(绿黄色)
+
+
+
+黑金:
+1.色相:暖色向橙色靠拢
+2.饱和度:冷色饱和度都去掉
+3.调整冷色的明亮度。
+4.降低曝光，增加清晰度，去除薄雾。
+
+青橙
+1.校准面板中色相:将蓝原色降低，
+2.混色器（HSL）中的色相:将暖色向橙色靠拢，将冷色向青色靠拢
+3.明亮度:冷色降低
+4.饱和度:降低
+5.清晰度增加
 
