--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -25827,220 +25827,7 @@ sudo -u rabbitmq /opt/apps/rabbitmq/sbin/./rabbitmqctl set_policy ha-policy-all 
 
 
 
-#### HAProxy
-
- HAProxy 提供高可用性、负载均衡以及基于TCP和HTTP应用的代理，支持虚拟主机，它是免费、快速并且可靠的一种解决方案。HAProxy 特别适用于那些负载特大的web站点，这些站点通常又需要会话保持或七层处理。HAProxy 运行在当前的硬件上，完全可以支持数以万计的并发连接。
-
-[Nginx 与 HAProxy 的区别](https://cloud.tencent.com/developer/article/2124089)
-
-##### 安装配置部署管理
-
-[HAproxy 配置详解](https://cloud.tencent.com/developer/article/2034982)
-
-###### 安装
-
-```shell
-wget -c https://www.haproxy.org/download/2.8/src/haproxy-2.8.3.tar.gz
-sudo tar -zxvf haproxy-2.8.3.tar.gz -C /opt/apps
-
-cd /opt/apps/haproxy-2.8.3
-sudo make ARCH=x86_64 TARGET=linux-glibc USE_PCRE=1 USE_OPENSSL=1 USE_ZLIB=1 PREFIX=/opt/apps/haproxy
-# ARCH=x86_64 #CPU架构，arch命令查看
-# TARGET=linux-glibc #通用linux内核
-# USE_PCRE=1 #PCRE支持正则表达式，用于用户请求的uri
-# USE_OPENSSL=1 #https，证书
-# USE_ZLIB=1 #开启压缩
-# USE_SYSTEMD=1 #使用systemd启动haproxy主进程
-# USE_CPU_AFFINITY=1 #CPU亲和性，让haproxy指定的进程工作在指定的CPU核心上
-# USE_LUA=1 LUA_INC=/usr/local/src/lua-5.3.5/src LUA_LIB=/usr/local/src/lua-5.3.5/src #开启lua，及lua和lua库所在路径
-# PREFIX=/opt/apps/haproxy #指定安装路径
-
-sudo make install PREFIX=/opt/apps/haproxy
-
-sudo rm -r /opt/apps/haproxy-2.8.3
-```
-
-
-
-###### 配置
-
-[/opt/apps/haproxy/haproxy.cfg](../files/config/haproxy.cfg)
-
-
-
-###### 创建用户（组）
-
-```shell
-sudo groupadd -r apps
-sudo useradd -r -g apps -s /bin/false haproxy
-
-sudo mkdir /opt/temp/haproxy/
-sudo touch /opt/temp/haproxy/haproxy.pid
-sudo mkdir /var/log/haproxy/
-sudo chown -R haproxy:root /opt/apps/haproxy
-sudo chown -R haproxy:root /opt/temp/haproxy
-sudo chown -R haproxy:root /var/log/haproxy
-```
-
-
-
-###### 服务管理
-
-手动
-
-```shell
-# 启动
-sudo /opt/apps/haproxy/sbin/haproxy -f /opt/apps/haproxy/haproxy.cfg
-
-ps aux | grep 'haproxy'
-# 或者
-cat /opt/temp/haproxy/haproxy.pid
-
-sudo kill -9 PID
-```
-
-
-
-自动
-
-编写[脚本](../files/scripts/server/haproxy.server)文件放在 base_dir 目录下 `/opt/apps/haproxy/haproxy.server`
-
-配置参考 Linux -> 服务管理  -> 系统启动时自动运行服务
-
-
-
-启动之后在浏览器打开[链接](http://localhost:15672/)，默认用户名/密码是 geust/geust 。
-
-使用默认的用户 guest / guest （此也为管理员用户）登陆，会发现无法登陆，报错：User can only log in via localhost。那是因为默认是限制了guest用户只能在本机登陆，也就是只能登陆 localhost:15672。可以通过修改配置文件rabbitmq.conf，取消这个限制： loopback_users 这个项就是控制访问的，如果只是取消 guest 用户的话，只需要 loopback_users.guest = false 即可。
-
-
-
-#### Keepalived
-
-##### 简介
-
-[Keepalived 介绍、安装及配置详解](https://blog.csdn.net/Jailman/article/details/128528844)
-
-Keepalived 起初是为 LVS(Linux Virtual Server) 设计的专门用来监控集群系统中各个服务节点的状态如果某个服务节点出现异常或者工作出现故障,Keepalived 将检测到,并将出现故障的服务节点从集群系统中剔除,而在故障节点恢复正常后,Keepalived 又可以自动将该服务节点重新加入集群中，这些工作全部自动完成。这部分功能类似于 Nginx 等反向代理的应用探活功能实现后端服务高可用。
-后来又加入了 VRRP(Virtual Router Redundancy Protocol) 的功能，虚拟路由协议出现的目的是为了解决静态路由出现的单点故障问题，通过VRRP可以实现网络不间断稳定运行，因此 Keepalived 一方面具有服务器状态检测和故障隔离功能，另一方面也有 HA cluster 功能；这个功能实现各种中间件高可用。
-
-
-
-[debian11 安装 keepalived](https://blog.csdn.net/weixin_44298261/article/details/112056315)
-
-##### 安装配置部署管理
-
-###### 安装
-
-[Keepalived for Linux](https://www.keepalived.org/download.html)
-
-```shell
-wget -c https://www.keepalived.org/software/keepalived-2.1.5.tar.gz
-sudo tar -zxvf keepalived-2.1.5.tar.gz -C /opt/apps/
-cd /opt/apps/keepalived-2.1.5
-sudo apt update
-sudo apt install curl gcc libssl-dev libnl-3-dev libnl-genl-3-dev libsnmp-dev
-sudo ./configure --prefix=/opt/apps/keepalived
-sudo make
-sudo make install
-cd .. && sudo rm -r /opt/apps/keepalived-2.1.5
-```
-
-
-
-###### 配置
-
-[keepalived.conf.sample](../files/config/keepalived.conf.sample)
-
-[keepalived.conf](../files/config/keepalived.conf)
-
-[check_haproxy.sh](../files/scripts/check_haproxy.sh)
-
-
-
-主备配置 router_id、vrrp_instance state、priority 应要不同
-
-
-
-###### 创建用户（组）
-
-```shell
-sudo groupadd -r apps
-# sudo useradd -r -g apps -s /bin/false keepalived
-
-sudo mkdir /opt/temp/keepalived/
-# sudo chown -R keepalived:root /opt/apps/keepalived
-# sudo chown -R keepalived:root /opt/temp/keepalived
-sudo chmod +x /opt/apps/keepalived/check_haproxy.sh
-```
-
-
-
-###### 服务管理
-
-手动
-
-```shell
-# 查看启动参数
-sudo /opt/apps/keepalived/sbin/keepalived --help
-#   -f, --use-file=FILE          Use the specified configuration file
-#                                 default '/opt/apps/keepalived/etc/keepalived/keepalived.conf'
-#                                      or '/etc/keepalived/keepalived.conf'
-#   -P, --vrrp                   Only run with VRRP subsystem
-#   -C, --check                  Only run with Health-checker subsystem
-#       --all                    Force all child processes to run, even if have no configuration
-#   -l, --log-console            Log messages to local console
-#   -D, --log-detail             Detailed log messages
-#   -S, --log-facility=([0-7]|local[0-7]|user|daemon)
-#                                Set syslog facility to LOG_LOCAL[0-7], user or daemon (default)
-#   -G, --no-syslog              Don't log via syslog
-#   -u, --umask=MASK             umask for file creation (in numeric form)
-#   -X, --release-vips           Drop VIP on transition from signal.
-#   -V, --dont-release-vrrp      Don't remove VRRP VIPs and VROUTEs on daemon stop
-#   -I, --dont-release-ipvs      Don't remove IPVS topology on daemon stop
-#   -R, --dont-respawn           Don't respawn child processes
-#   -n, --dont-fork              Don't fork the daemon process
-#   -d, --dump-conf              Dump the configuration data
-#   -p, --pid=FILE               Use specified pidfile for parent process
-#   -r, --vrrp_pid=FILE          Use specified pidfile for VRRP child process
-#   -T, --genhash                Enter into genhash utility mode (this should be the first option used).
-#   -c, --checkers_pid=FILE      Use specified pidfile for checkers child process
-#   -a, --address-monitoring     Report all address additions/deletions notified via netlink
-#   -s, --namespace=NAME         Run in network namespace NAME (overrides config)
-#   -m, --core-dump              Produce core dump if terminate abnormally
-#   -M, --core-dump-pattern=PATN Also set /proc/sys/kernel/core_pattern to PATN (default 'core')
-#   -e, --all-config             Error if any configuration file missing (same as includet)
-#   -i, --config-id id           Skip any configuration lines beginning '@' that don't match id
-#                                 or any lines beginning @^ that do match.
-#                                 The config-id defaults to the node name if option not used
-#       --signum=SIGFUNC         Return signal number for STOP, RELOAD, DATA, STATS, STATS_CLEAR
-#   -t, --config-test[=LOG_FILE] Check the configuration for obvious errors, output to
-#                                 stderr by default
-#   -v, --version                Display the version number
-#   -h, --help                   Display this help message
-  
-# 启动
-bash /opt/apps/keepalived/sbin/keepalived -f /opt/apps/keepalived/etc/keepalived/keepalived.conf -p /opt/temp/keepalived/keepalived.pid -r /opt/temp/keepalived/keepalived.vrrp.pid -D -S 0
-
-ps aux | grep 'keepalived'
-# 或者
-cat /opt/temp/keepalived/keepalived.pid
-
-sudo kill -9 PID
-
-# 日志
-sudo cat /var/log/local.0.log
-sudo cat /var/log/user.log
-sudo cat /var/log/daemon.log
-```
-
-
-
-自动
-
-编写[脚本](../files/scripts/server/keepalived.server)文件放在 base_dir 目录下 `/opt/apps/keepalived/keepalived.server`
-
-配置参考 Linux -> 服务管理  -> 系统启动时自动运行服务
+#### 配置 HAProxy+Keepalive
 
 
 
@@ -27335,6 +27122,225 @@ public class KafkaSpringDemoController {
 
 
 数据管道Connect
+
+
+
+# 服务高可用代理+负载均衡
+
+#### HAProxy
+
+ HAProxy 提供高可用性、负载均衡以及基于TCP和HTTP应用的代理，支持虚拟主机，它是免费、快速并且可靠的一种解决方案。HAProxy 特别适用于那些负载特大的web站点，这些站点通常又需要会话保持或七层处理。HAProxy 运行在当前的硬件上，完全可以支持数以万计的并发连接。
+
+[Nginx 与 HAProxy 的区别](https://cloud.tencent.com/developer/article/2124089)
+
+##### 安装配置部署管理
+
+[HAproxy 配置详解](https://cloud.tencent.com/developer/article/2034982)
+
+###### 安装
+
+```shell
+wget -c https://www.haproxy.org/download/2.8/src/haproxy-2.8.3.tar.gz
+sudo tar -zxvf haproxy-2.8.3.tar.gz -C /opt/apps
+
+cd /opt/apps/haproxy-2.8.3
+sudo make ARCH=x86_64 TARGET=linux-glibc USE_PCRE=1 USE_OPENSSL=1 USE_ZLIB=1 PREFIX=/opt/apps/haproxy
+# ARCH=x86_64 #CPU架构，arch命令查看
+# TARGET=linux-glibc #通用linux内核
+# USE_PCRE=1 #PCRE支持正则表达式，用于用户请求的uri
+# USE_OPENSSL=1 #https，证书
+# USE_ZLIB=1 #开启压缩
+# USE_SYSTEMD=1 #使用systemd启动haproxy主进程
+# USE_CPU_AFFINITY=1 #CPU亲和性，让haproxy指定的进程工作在指定的CPU核心上
+# USE_LUA=1 LUA_INC=/usr/local/src/lua-5.3.5/src LUA_LIB=/usr/local/src/lua-5.3.5/src #开启lua，及lua和lua库所在路径
+# PREFIX=/opt/apps/haproxy #指定安装路径
+
+sudo make install PREFIX=/opt/apps/haproxy
+
+sudo rm -r /opt/apps/haproxy-2.8.3
+```
+
+
+
+###### 配置
+
+[/opt/apps/haproxy/haproxy.cfg](../files/config/haproxy.cfg)
+
+
+
+###### 创建用户（组）
+
+```shell
+sudo groupadd -r apps
+sudo useradd -r -g apps -s /bin/false haproxy
+
+sudo mkdir /opt/temp/haproxy/
+sudo touch /opt/temp/haproxy/haproxy.pid
+sudo mkdir /var/log/haproxy/
+sudo chown -R haproxy:root /opt/apps/haproxy
+sudo chown -R haproxy:root /opt/temp/haproxy
+sudo chown -R haproxy:root /var/log/haproxy
+```
+
+
+
+###### 服务管理
+
+手动
+
+```shell
+# 启动
+sudo /opt/apps/haproxy/sbin/haproxy -f /opt/apps/haproxy/haproxy.cfg
+
+ps aux | grep 'haproxy'
+# 或者
+cat /opt/temp/haproxy/haproxy.pid
+
+sudo kill -9 PID
+```
+
+
+
+自动
+
+编写[脚本](../files/scripts/server/haproxy.server)文件放在 base_dir 目录下 `/opt/apps/haproxy/haproxy.server`
+
+配置参考 Linux -> 服务管理  -> 系统启动时自动运行服务
+
+
+
+启动之后在浏览器打开[链接](http://localhost:15672/)，默认用户名/密码是 geust/geust 。
+
+使用默认的用户 guest / guest （此也为管理员用户）登陆，会发现无法登陆，报错：User can only log in via localhost。那是因为默认是限制了guest用户只能在本机登陆，也就是只能登陆 localhost:15672。可以通过修改配置文件rabbitmq.conf，取消这个限制： loopback_users 这个项就是控制访问的，如果只是取消 guest 用户的话，只需要 loopback_users.guest = false 即可。
+
+
+
+#### Keepalived
+
+##### 简介
+
+[Keepalived 介绍、安装及配置详解](https://blog.csdn.net/Jailman/article/details/128528844)
+
+Keepalived 起初是为 LVS(Linux Virtual Server) 设计的专门用来监控集群系统中各个服务节点的状态如果某个服务节点出现异常或者工作出现故障,Keepalived 将检测到,并将出现故障的服务节点从集群系统中剔除,而在故障节点恢复正常后,Keepalived 又可以自动将该服务节点重新加入集群中，这些工作全部自动完成。这部分功能类似于 Nginx 等反向代理的应用探活功能实现后端服务高可用。
+后来又加入了 VRRP(Virtual Router Redundancy Protocol) 的功能，虚拟路由协议出现的目的是为了解决静态路由出现的单点故障问题，通过VRRP可以实现网络不间断稳定运行，因此 Keepalived 一方面具有服务器状态检测和故障隔离功能，另一方面也有 HA cluster 功能；这个功能实现各种中间件高可用。
+
+
+
+[debian11 安装 keepalived](https://blog.csdn.net/weixin_44298261/article/details/112056315)
+
+##### 安装配置部署管理
+
+###### 安装
+
+[Keepalived for Linux](https://www.keepalived.org/download.html)
+
+```shell
+wget -c https://www.keepalived.org/software/keepalived-2.1.5.tar.gz
+sudo tar -zxvf keepalived-2.1.5.tar.gz -C /opt/apps/
+cd /opt/apps/keepalived-2.1.5
+sudo apt update
+sudo apt install curl gcc libssl-dev libnl-3-dev libnl-genl-3-dev libsnmp-dev
+sudo ./configure --prefix=/opt/apps/keepalived
+sudo make
+sudo make install
+cd .. && sudo rm -r /opt/apps/keepalived-2.1.5
+```
+
+
+
+###### 配置
+
+[keepalived.conf.sample](../files/config/keepalived.conf.sample)
+
+[keepalived.conf](../files/config/keepalived.conf)
+
+[check_haproxy.sh](../files/scripts/check_haproxy.sh)
+
+
+
+主备配置 router_id、vrrp_instance state、priority 应要不同
+
+
+
+###### 创建用户（组）
+
+```shell
+sudo groupadd -r apps
+# sudo useradd -r -g apps -s /bin/false keepalived
+
+sudo mkdir /opt/temp/keepalived/
+# sudo chown -R keepalived:root /opt/apps/keepalived
+# sudo chown -R keepalived:root /opt/temp/keepalived
+sudo chmod +x /opt/apps/keepalived/check_haproxy.sh
+```
+
+
+
+###### 服务管理
+
+手动
+
+```shell
+# 查看启动参数
+sudo /opt/apps/keepalived/sbin/keepalived --help
+#   -f, --use-file=FILE          Use the specified configuration file
+#                                 default '/opt/apps/keepalived/etc/keepalived/keepalived.conf'
+#                                      or '/etc/keepalived/keepalived.conf'
+#   -P, --vrrp                   Only run with VRRP subsystem
+#   -C, --check                  Only run with Health-checker subsystem
+#       --all                    Force all child processes to run, even if have no configuration
+#   -l, --log-console            Log messages to local console
+#   -D, --log-detail             Detailed log messages
+#   -S, --log-facility=([0-7]|local[0-7]|user|daemon)
+#                                Set syslog facility to LOG_LOCAL[0-7], user or daemon (default)
+#   -G, --no-syslog              Don't log via syslog
+#   -u, --umask=MASK             umask for file creation (in numeric form)
+#   -X, --release-vips           Drop VIP on transition from signal.
+#   -V, --dont-release-vrrp      Don't remove VRRP VIPs and VROUTEs on daemon stop
+#   -I, --dont-release-ipvs      Don't remove IPVS topology on daemon stop
+#   -R, --dont-respawn           Don't respawn child processes
+#   -n, --dont-fork              Don't fork the daemon process
+#   -d, --dump-conf              Dump the configuration data
+#   -p, --pid=FILE               Use specified pidfile for parent process
+#   -r, --vrrp_pid=FILE          Use specified pidfile for VRRP child process
+#   -T, --genhash                Enter into genhash utility mode (this should be the first option used).
+#   -c, --checkers_pid=FILE      Use specified pidfile for checkers child process
+#   -a, --address-monitoring     Report all address additions/deletions notified via netlink
+#   -s, --namespace=NAME         Run in network namespace NAME (overrides config)
+#   -m, --core-dump              Produce core dump if terminate abnormally
+#   -M, --core-dump-pattern=PATN Also set /proc/sys/kernel/core_pattern to PATN (default 'core')
+#   -e, --all-config             Error if any configuration file missing (same as includet)
+#   -i, --config-id id           Skip any configuration lines beginning '@' that don't match id
+#                                 or any lines beginning @^ that do match.
+#                                 The config-id defaults to the node name if option not used
+#       --signum=SIGFUNC         Return signal number for STOP, RELOAD, DATA, STATS, STATS_CLEAR
+#   -t, --config-test[=LOG_FILE] Check the configuration for obvious errors, output to
+#                                 stderr by default
+#   -v, --version                Display the version number
+#   -h, --help                   Display this help message
+  
+# 启动
+bash /opt/apps/keepalived/sbin/keepalived -f /opt/apps/keepalived/etc/keepalived/keepalived.conf -p /opt/temp/keepalived/keepalived.pid -r /opt/temp/keepalived/keepalived.vrrp.pid -D -S 0
+
+ps aux | grep 'keepalived'
+# 或者
+cat /opt/temp/keepalived/keepalived.pid
+
+sudo kill -9 PID
+
+# 日志
+sudo cat /var/log/local.0.log
+sudo cat /var/log/user.log
+sudo cat /var/log/daemon.log
+```
+
+
+
+自动
+
+编写[脚本](../files/scripts/server/keepalived.server)文件放在 base_dir 目录下 `/opt/apps/keepalived/keepalived.server`
+
+配置参考 Linux -> 服务管理  -> 系统启动时自动运行服务
 
 
 
@@ -30057,7 +30063,7 @@ ElasticSearch：擅长海量数据的搜索、分析、计算
 | ElasticSearch   | Mysql            | 说明                                                         |
 | --------------- | ---------------- | ------------------------------------------------------------ |
 | index           | database         | 索引（index）就是相同类型文档（document）的集合，类似数据库的表（table） |
-| type            | table            |                                                              |
+| type            | table            | ES5.x版本中，一个Index下可以创建多个 Type，ES6.x版本中，一个Index下可以创建一个 Type，ES7.x版本中，一个Index下没有 Type |
 | document        | row              | 文档 （document），就是一条条的数据，类似数据库中的行（row），文档都是 JSON 格式 |
 | field           | column           | 字段 （field），就是 JSON 文档中的字段，类似数据库中的列（column） |
 | 字段定义mapping | 表结构定义schema | mapping（映射）是索引中文档的约束，例如字段类型约束。类似数据库的表结构（schema） |
@@ -30069,7 +30075,7 @@ ElasticSearch：擅长海量数据的搜索、分析、计算
 
 ### Index
 
-​		索引（index）类似于关系型数据库里的“数据库”——它是我们存储和索引关联数据的 地方。索引名称必须是全部小写，不能以下划线开头，不能包含逗号，在同一个索引中，同一个字段只能定义一个数据类型。ES6.X 后面版本 index 实际上在现在的 ES 中既有库的概念也有表的概念。
+​		索引（index）类似于关系型数据库里的“数据库”——它是我们存储和索引关联数据的地方。索引名称必须是全部小写，不能以下划线开头，不能包含逗号，在同一个索引中，同一个字段只能定义一个数据类型。ES6.X 后面版本 index 实际上在现在的 ES 中既有库的概念也有表的概念。
 
 
 
@@ -30135,7 +30141,7 @@ PUT /索引库名称
 
 ### Document
 
-​		ES 是面向文档的，文档是 ES 中可搜索的最小单位，ES 的文档由一个或多个字段组成，类似于关系型数据库中的一行记录，但 ES 的文档是以 JSON 进行序列化并保存的，每个 JSON 对象 由一个或多个字段组成，字段类型可以是布尔，数值，字符串、二进制、日期等数据类型。 
+​		ES 是面向文档的，文档是 ES 中可搜索的最小单位，ES 的文档由一个或多个字段组成，类似于关系型数据库中的一行记录，但 ES 的文档是以 JSON 进行序列化并保存的，每个 JSON 对象由一个或多个字段组成，字段类型可以是布尔，数值，字符串、二进制、日期等数据类型。 
 
 
 
@@ -30250,7 +30256,10 @@ PUT /索引库名称
       },
       "字段名2": {
         "type": "keyword",
-        "index": "false"
+        // 该字段是否需要被检索，默认：true
+        "index": true,
+          // 是否需要额外存储，默认：false
+        "store": false
       },
       "字段名3": {
         "type": "date",
@@ -30274,6 +30283,8 @@ PUT /索引库名称
 
 
 #### 数据类型（type）
+
+[Field data types | Elasticsearch Guide [8.10\] | Elastic](https://www.elastic.co/guide/en/elasticsearch/reference/8.10/mapping-types.html)
 
 ##### 字符串类型
 
@@ -30305,6 +30316,10 @@ keyword 适合简短、结构化字符串，例如主机名、姓名、商品名
 ##### 日期类型
 
 - date
+
+```console
+"yyyy-MM-dd HH:mm:ss||yyyy-MM-dd||epoch_millis"
+```
 
 在 ES 中日期可以为格式化的日期字符串或者时间戳。
 
