--- a/solid/服务.MD
+++ b/solid/服务.MD
@@ -3490,7 +3490,7 @@ public class ElasticSearchConfig {
   "properties": {
     "name": {
       "type": "text",
-      "analyzer": "standard"
+      "analyzer": "ik_smart"
     },
     "info": {
       "type": "text",
@@ -3726,6 +3726,72 @@ public class ElasticSearchDocumentTest {
 
 
 
+###### term&terms查询
+
+term查询代表完全匹配，搜索之前不会对你搜索的关键词进行分词，对你的关键字去文档分词库中去匹配内容。
+
+terms和term的查询机制是一样的，都不会将指定的查询关键字进行分词，直接去分词库中匹配，找到相应文档内容。
+
+terms是在针对一个字段包含多个值的时候使用。
+
+term: where = ?
+
+terms: in()
+
+```json
+// http://192.168.31.90:10519/sms-logs-index/_search/
+{
+    "from": 0,
+    "size": 5,
+    "query": {
+        "term": {
+            "province": {
+                "value": "北京"
+            }
+        }
+    }
+}
+
+{
+    "from": 0,
+    "size": 5,
+    "query": {
+        "terms": {
+            "province": [
+                "北京",
+                "武汉"
+            ]
+        }
+    }
+}
+```
+
+```java
+public void searchDocument() throws IOException {
+    Query nameQuery = MatchQuery.of(m -> m.field("name").query("小米15"))._toQuery();
+    Query priceQuery = MatchQuery.of(m -> m.field("price").query(3999.99))._toQuery();
+    List<FieldValue> provinceList = new ArrayList<>(2);
+    provinceList.add(FieldValue.of("北京"));
+    provinceList.add(FieldValue.of("武汉"));
+    // 搜索
+    SearchResponse<SmsLogsPO> response = client.search(request -> request
+                    .index(ElasticSearchIndexTest.INDEX_NAME)
+                    .query(q ->
+                              q.term(t -> t.field("province").value("北京"))    // term 查询
+                              q.terms(t -> t.field("province").terms(ts -> ts.value(provinceList)))  // terms 查询
+                    )
+                    .from(0).size(20), // 浅分页，类似 mysql 的 limit 参见：https://www.elastic.co/guide/en/elasticsearch/reference/current/paginate-search-results.html
+            SmsLogsPO.class);
+    System.out.println(response.hits().total().value()); //数量
+    response.hits().hits().forEach(h -> {
+        SmsLogsPO log = h.source(); // 实体类
+        System.out.println(log);
+    });
+}
+```
+
+
+
 
 
 | 字段名称   | 备注                             |
@@ -3807,6 +3873,8 @@ public class GoodsPO {
      * 商品日期
      */
     @Field(name = "create_date", type = FieldType.Date, format = {DateFormat.year_month_day, DateFormat.date_hour_minute_second})
+    @JsonSerialize(using = LocalDateTimeSerializer.class)
+    @JsonDeserialize(using = LocalDateTimeDeserializer.class)
     private LocalDateTime createDate;
 }
 ```
