--- a/solid/服务.MD
+++ b/solid/服务.MD
@@ -3726,17 +3726,27 @@ public class ElasticSearchDocumentTest {
 
 
 
-###### term&terms查询
+###### term 查询
 
-term查询代表完全匹配，搜索之前不会对你搜索的关键词进行分词，对你的关键字去文档分词库中去匹配内容。
+**term 查询**
 
-terms和term的查询机制是一样的，都不会将指定的查询关键字进行分词，直接去分词库中匹配，找到相应文档内容。
+代表完全匹配，搜索之前不会对你搜索的关键词进行分词，对你的关键字去文档分词库中去匹配内容。
 
-terms是在针对一个字段包含多个值的时候使用。
+
+
+**terms 查询**
+
+terms 和 term 的查询机制是一样的，都不会将指定的查询关键字进行分词，直接去分词库中匹配，找到相应文档内容。
+
+terms 是在针对一个字段包含多个值的时候使用。
+
+
 
 term: where = ?
 
 terms: in()
+
+
 
 ```json
 // http://192.168.31.90:10519/sms-logs-index/_search/
@@ -3768,8 +3778,6 @@ terms: in()
 
 ```java
 public void searchDocument() throws IOException {
-    Query nameQuery = MatchQuery.of(m -> m.field("name").query("小米15"))._toQuery();
-    Query priceQuery = MatchQuery.of(m -> m.field("price").query(3999.99))._toQuery();
     List<FieldValue> provinceList = new ArrayList<>(2);
     provinceList.add(FieldValue.of("北京"));
     provinceList.add(FieldValue.of("武汉"));
@@ -3780,7 +3788,8 @@ public void searchDocument() throws IOException {
                               q.term(t -> t.field("province").value("北京"))    // term 查询
                               q.terms(t -> t.field("province").terms(ts -> ts.value(provinceList)))  // terms 查询
                     )
-                    .from(0).size(20), // 浅分页，类似 mysql 的 limit 参见：https://www.elastic.co/guide/en/elasticsearch/reference/current/paginate-search-results.html
+                    .from(0)   // 浅分页，类似 mysql 的 limit 参见：https://www.elastic.co/guide/en/elasticsearch/reference/current/paginate-search-results.html
+                    .size(20), // 默认查询 10 条,如果需要查询更多则需要指定 size
             SmsLogsPO.class);
     System.out.println(response.hits().total().value()); //数量
     response.hits().hits().forEach(h -> {
@@ -3791,6 +3800,163 @@ public void searchDocument() throws IOException {
 ```
 
 
+
+###### match 查询
+
+**match 查询**
+
+属于高层查询，他会根据你查询的字段类型不一样，采用不同的查询方式。
+
+- 查询的是日期或者是数值的话，他会将你基于的字符串查询内容转换为日期或者数值对待。
+- 如果查询的内容是一个不能被分词的内容(keyword)，match 查询不会对你指定的查询关键字进行分词。
+- 如果查询的内容时一个可以被分词的内容(text)，match 会将你指定的查询内容根据一定的方式去分词，去分词库中匹配指定的内容。
+
+match 查询，实际底层就是多个 term 查询，将多个 term 查询的结果给你封装到了一起。
+
+
+
+**match_all 查询**
+
+查询全部内容，不指定任何查询条件。
+
+
+
+**布尔 match 查询**
+
+基于一个 Field 匹配的内容，采用 and 或者 or 的方式连接。
+
+
+
+**multi_match 查询**
+
+match 针对一个 Field 做检索，multi_match 针对多个 Field 进行检索，多个 Field 对应一个 text。
+
+
+
+```json
+// http://192.168.31.90:10519/sms-logs-index/_search/
+// match_all 查询
+{
+    "from": 0,
+    "size": 5,
+    "query": {
+        "match_all": {}
+    }
+}
+
+// match 查询
+{
+    "from": 0,
+    "size": 5,
+    "query": {
+        "match": {
+            "smsContent": "尊敬尊贵"
+        }
+    }
+}
+
+// 布尔 match 查询
+{
+    "from": 0,
+    "size": 5,
+    "query": {
+        "match": {
+            "smsContent": {
+                "query": "尊贵 先生",
+                "operator": "and" // and or
+            }
+        }
+    }
+}
+
+// multi_match 查询
+{
+    "from": 0,
+    "size": 5,
+    "query": {
+        "multi_match": {
+            "query": "北京",
+            "fields": ["province", "smsContent"]
+        }
+    }
+}
+```
+
+
+
+```java
+public void searchDocument() throws IOException {
+    // 搜索
+    SearchResponse<SmsLogsPO> response = client.search(request -> request
+                    .index(ElasticSearchIndexTest.INDEX_NAME)
+                    .query(q ->
+//                                    q.matchAll(m -> m) // match_all 查询
+//                                    q.match(m -> m.field("smsContent").query("尊敬尊贵")) // match 查询
+//                                    q.match(m -> m.field("smsContent").query("尊贵 先生").operator(Operator.And)) // 布尔 match 查询
+                                    q.multiMatch(m -> m.query("北京").fields("province","smsContent")) // multi_match 查询
+                    )
+                    .from(0)   // 浅分页，类似 mysql 的 limit 参见：https://www.elastic.co/guide/en/elasticsearch/reference/current/paginate-search-results.html
+                    .size(20), // 默认查询 10 条,如果需要查询更多则需要指定 size
+            SmsLogsPO.class);
+    System.out.println(response.hits().total().value()); //数量
+    response.hits().hits().forEach(h -> {
+        SmsLogsPO log = h.source(); // 实体类
+        System.out.println(log);
+    });
+}
+```
+
+
+
+###### id 查询
+
+```json
+// id 查询
+http://192.168.31.90:10519/sms-logs-index/_doc/2O9_VpEBCrSApDIskHH3
+
+// ids 查询
+http://192.168.31.90:10519/sms-logs-index/_search/
+{
+    "from": 0,
+    "size": 5,
+    "query": {
+        "ids": {
+            "values": ["1u9_VpEBCrSApDIskHH3", "2O9_VpEBCrSApDIskHH3"]
+        }
+    }
+}
+```
+
+
+
+```java
+// id 查询
+public void queryDocument() throws IOException {
+    GetResponse<SmsLogsPO> response = client.get(request -> request
+                    .index(ElasticSearchIndexTest.INDEX_NAME)
+                    .id("1u9_VpEBCrSApDIskHH3"),
+            SmsLogsPO.class);
+    System.out.println(response);
+}
+
+// ids 查询
+public void searchDocument() throws IOException {
+    // 搜索
+    SearchResponse<SmsLogsPO> response = client.search(request -> request
+                    .index(ElasticSearchIndexTest.INDEX_NAME)
+                    .query(q ->
+                                    q.ids(i ->i.values("1u9_VpEBCrSApDIskHH3", "2O9_VpEBCrSApDIskHH3"))
+                    )
+                    .from(0)   // 浅分页，类似 mysql 的 limit 参见：https://www.elastic.co/guide/en/elasticsearch/reference/current/paginate-search-results.html
+                    .size(20), // 默认查询 10 条,如果需要查询更多则需要指定 size
+            SmsLogsPO.class);
+    System.out.println(response.hits().total().value()); //数量
+    response.hits().hits().forEach(h -> {
+        SmsLogsPO log = h.source(); // 实体类
+        System.out.println(log);
+    });
+}
+```
 
 
 
